After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781264 - video-sink: Fix compilation error
video-sink: Fix compilation error
Status: RESOLVED FIXED
Product: clutter-gst
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-gst-maint
clutter-gst-maint
Depends on:
Blocks:
 
 
Reported: 2017-04-13 11:00 UTC by Bastien Nocera
Modified: 2017-04-13 15:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
video-sink: Fix compilation error (1.42 KB, patch)
2017-04-13 11:00 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-04-13 11:00:51 UTC
.
Comment 1 Bastien Nocera 2017-04-13 11:00:55 UTC
Created attachment 349787 [details] [review]
video-sink: Fix compilation error

clutter-gst-video-sink.c: In function ‘clutter_gst_video_sink_setup_balance’:
clutter-gst-video-sink.c:831:44: error: format not a string literal, argument types not checked [-Werror=format-nonliteral]
    priv->custom_start + 2);
    ^~~~
Comment 2 Lionel Landwerlin 2017-04-13 15:26:37 UTC
Review of attachment 349787 [details] [review]:

Thanks, feel free to commit.
Comment 3 Bastien Nocera 2017-04-13 15:37:43 UTC
Attachment 349787 [details] pushed as 3b3c5d4 - video-sink: Fix compilation error