video-sink: Fix compilation error

clutter-gst-video-sink.c: In function ‘clutter_gst_video_sink_setup_balance’:
clutter-gst-video-sink.c:831:44: error: format not a string literal, argument types not checked [-Werror=format-nonliteral]
    priv->custom_start + 2);
    ^~~~

https://bugzilla.gnome.org/show_bug.cgi?id=781264